change spacing and add color variable

--- a/history.html
+++ b/history.html
@@ -518,7 +518,7 @@
 				BandName4<br>
 			</p>
 			-->
-			<a href="index.html#events"><button id="backButton" class="btnghost">
+			<a href="index.html#events"><button id="backButton" class="btnghost" style="box-shadow: 5px 5px 7px var(--main-color);">
 				<i id="backButton" class="fa fa-caret-left fa-fw"></i><span id="posterButtonSpan">Back to Home</span>
 			</button></a>
 		</div>
