--- a/index.html
+++ b/index.html
@@ -61,15 +61,16 @@
 
 	<!-- NAVIGATION BAR -->
 	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+	<!-- <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="box-shadow: 0px 0px 7px #bbb;"> -->
 		<div class="container">
 			<div class="navbar-header">
-				<!-- TODELETE -->
+				<!-- menu for mobile view-->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 					<i class="fa fa-bars"></i>
 				</button>
 
 				<!-- on left of navbar -->
-				<ul class="list-inline">
+				<ul class="list-inline" style="margin-bottom: 0;">
 					<li><a class="navbar-brand page-scroll" href="#">STAR COURSE at UIUC</a></li>
 				</ul>
 			</div>
@@ -115,7 +116,7 @@
 	<!-- Events Section -->
 	<section id="events">
 		<a name="events"></a>
-		<div class="container content-section text-center" style="padding-top: 80px;">
+		<div class="container content-section text-center" style="padding-top: 80px; padding-bottom: 30px;">
 			<div class="row">
 				
 				<!-- UPCOMING EVENTS -->
@@ -131,9 +132,10 @@
 						<b>find us in the fall @starcourseuiuc</b>
 						<br/> to join our staff for the 2020 - 2021 school year.
 						<br/>
-						<i class="fa fa-facebook fa-fw"></i>
-						<i class="fa fa-twitter fa-fw"></i>
-						<i class="fa fa-instagram fa-fw"></i><br />
+						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
+						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+						<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
+						<br />
 					</p>
 					<br/>
 
@@ -242,15 +244,15 @@
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters">
 						<h4 class="text-center"> 2019 - 2020 Season </h4>
-						<img src="img/posters/doja.jpg" title="Doja Cat" height="250">
-						<img src="img/posters/peachpit.jpg" title="Peach Pit" height="250">
-						<img src="img/posters/earthgang.png" title="Earthgang" height="250">
+						<img src="img/posters/doja.jpg" title="Doja Cat" style="margin-top: 5px;" height="250">
+						<img src="img/posters/peachpit.jpg" title="Peach Pit" style="margin-top: 5px;" height="250">
+						<img src="img/posters/earthgang.png" title="Earthgang" style="margin-top: 5px;" height="250">
 						<p><br></p>
 					</div>
 
 					<!-- button to show posters -->
 					<p>
-						<button id="posterButton" class="btnghost" onclick="showPosters()">
+						<button id="posterButton" class="btnghost" style="box-shadow: 0px 5px 7px #000;" onclick="showPosters()">
 							<i id="posterButtonI" class="fa fa-caret-down fa-fw"></i><span id="posterButtonSpan">Show More</span>
 						</button>
 					</p>
@@ -273,65 +275,65 @@
 						
 						<div class="row">
 							<h4 class="text-center"> 2018 - 2019 Season </h4>
-							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney" height="250">
-							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" height="250">
-							<img src="img/posters/smino.jpg" title="Smino" height="250">
-							<img src="img/posters/springjam2019.jpg" title="Spring Jam Lil Yachty" height="250">
+							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney"  style="margin-top: 5px;" height="250">
+							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" style="margin-top: 5px;" height="250">
+							<img src="img/posters/smino.jpg" title="Smino" style="margin-top: 5px;" height="250">
+							<img src="img/posters/springjam2019.jpg" title="Spring Jam Lil Yachty" style="margin-top: 5px;" height="250">
 							<p><br></p>
 						</div>
 						<br>
 						<div class="row">
 							<h4 class="text-center"> 2017 - 2018 Season </h4>
-							<img src="img/posters/joywave.png" title="Joywave" height="250">
-							<img src="img/posters/waka.jpg" title="Waka Flocka Flame" height="250">
-							<img src="img/posters/strfkr.jpg" title="STRFKR" height="250">
-							<img src="img/posters/springjam2018.jpg" title="Spring Jam T-Pain" height="250">
+							<img src="img/posters/joywave.png" title="Joywave" style="margin-top: 5px;" height="250">
+							<img src="img/posters/waka.jpg" title="Waka Flocka Flame" style="margin-top: 5px;" height="250">
+							<img src="img/posters/strfkr.jpg" title="STRFKR" style="margin-top: 5px;" height="250">
+							<img src="img/posters/springjam2018.jpg" title="Spring Jam T-Pain" style="margin-top: 5px;" height="250">
 							<p><br></p>
 						</div>
 						<br>
 						<div class="row">
 							<h4 class="text-center"> 2016 - 2017 Season </h4>
-							<img src="img/posters/neonindian.png" title="Neon Indian" height="250">
-							<img src="img/posters/americanfootball.png" title="American Football" height="250">
-							<img src="img/posters/Vince.png" title="Vince Staples" height="250">
-							<img src="img/posters/noname.jpg" title="Noname" height="250">
-							<img src="img/posters/springjam2017.jpg" title="Spring Jam Post Malone" height="150">
+							<img src="img/posters/neonindian.png" title="Neon Indian" style="margin-top: 5px;" height="250">
+							<img src="img/posters/americanfootball.png" title="American Football" style="margin-top: 5px;" height="250">
+							<img src="img/posters/Vince.png" title="Vince Staples" style="margin-top: 5px;" height="250">
+							<img src="img/posters/noname.jpg" title="Noname" style="margin-top: 5px;" height="250"><br>
+							<img src="img/posters/springjam2017.jpg" title="Spring Jam Post Malone" style="margin-top: 5px;" height="150">
 							<p><br></p>
 						</div>
 						<br>
 						<div class="row">
 							<h4 class="text-center"> 2015 - 2016 Season </h4>
-							<img src="img/posters/nateruess.png" title="Nate Ruess" height="250">
-							<img src="img/posters/raesremmurd.png" title="Rae Sremmurd" height="250">
-							<img src="img/posters/rynweaver.png" title="Ryn Weaver" height="250">
-							<img src="img/posters/fatherjohnmisty.jpg" title="Father John Misty" height="250">
+							<img src="img/posters/nateruess.png" title="Nate Ruess" style="margin-top: 5px;" height="250">
+							<img src="img/posters/raesremmurd.png" title="Rae Sremmurd" style="margin-top: 5px;" height="250">
+							<img src="img/posters/rynweaver.png" title="Ryn Weaver" style="margin-top: 5px;" height="250">
+							<img src="img/posters/fatherjohnmisty.jpg" title="Father John Misty" style="margin-top: 5px;" height="250">
 							<p><br></p>
 						</div>
 						<br>
 						<div class="row">
 							<h4 class="text-center"> 2014 - 2015 Season </h4>
-							<img src="img/posters/skyferreira.jpg" title="Sky Ferreira" height="250">
-							<img src="img/posters/hoodieallen.jpg" title="Hoodie Allen" height="250">
-							<img src="img/posters/boburnham.jpg" title="Bo Burnham" height="250">
-							<img src="img/posters/ilovemakonnen.jpg" title="ILOVEMAKONNEN" height="250">
-							<img src="img/posters/mac.jpg" title="Mac DeMarco" width="250">
+							<img src="img/posters/skyferreira.jpg" title="Sky Ferreira" style="margin-top: 5px;" height="250">
+							<img src="img/posters/hoodieallen.jpg" title="Hoodie Allen" style="margin-top: 5px;" height="250">
+							<img src="img/posters/boburnham.jpg" title="Bo Burnham" style="margin-top: 5px;" height="250">
+							<img src="img/posters/ilovemakonnen.jpg" title="ILOVEMAKONNEN" style="margin-top: 5px;" height="250"><br>
+							<img src="img/posters/mac.jpg" title="Mac DeMarco" style="margin-top: 5px;" width="250">
 							<p><br></p>
 						</div>
 						<br>
 						<div class="row">
 							<h4 class="text-center"> 2013 - 2014 Season </h4>
-							<img src="img/posters/caseyjames.jpg" title="Casey James" height="250">
-							<img src="img/posters/baauer.jpg" title="Baauer" height="250">
-							<img src="img/posters/grouplove.jpg" title="Grouplove" height="250">
-							<img src="img/posters/phantogram.jpg" title="Phantogram" height="250">
-							<img src="img/posters/magicman.jpg" title="Magic Man" width="250">
+							<img src="img/posters/caseyjames.jpg" title="Casey James" style="margin-top: 5px;" height="250">
+							<img src="img/posters/baauer.jpg" title="Baauer" style="margin-top: 5px;" height="250">
+							<img src="img/posters/grouplove.jpg" title="Grouplove" style="margin-top: 5px;" height="250">
+							<img src="img/posters/phantogram.jpg" title="Phantogram" style="margin-top: 5px;" height="250"><br>
+							<img src="img/posters/magicman.jpg" title="Magic Man" style="margin-top: 5px;" width="250">
 							<p><br></p>
 						</div>
 
 						<!-- BUTTON at bottom of posters, redirects to history -->
-						<a href="history.html#history"><button id="backButton" class="btnghost">
-							<span id="posterButtonSpan">See More History</span>
-							<i id="backButton" class="fa fa-caret-right fa-fw"></i>
+						<a href="history.html#history" ><button id="backButton" class="btnghost" >
+							<span id="posterButtonSpan" >See More History</span>
+							<i id="backButton" class="fa fa-caret-right fa-fw" ></i>
 						</button></a>
 
 					</div><!-- end of posters -->
@@ -348,10 +350,10 @@
 		All images should be the same dimensions in order to fit correctly. -->
 		<div class="gallery">
 			<ul>
-				<li class="col-md-3"><img src="img/livephotos/phant-1bw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/caseybw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/grouplove_bw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/concert4bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/phant-1bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/caseybw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/grouplove_bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/concert4bw.jpg" alt=""></li>
 			</ul>
 		</div>
 	</section>
@@ -360,9 +362,9 @@
 	<!-- ABOUT SECTION -->
 	<section id="about">
 		<a name="about"></a>
-		<div class="container content-section text-left">
+		<div class="container content-section text-left" style="padding-top: 70px; padding-bottom: 70px;">
 			<div class="row" style="text-align: justify; text-align-last: center;">
-				<h2 class="text-center">ABOUT US</h2>
+				<h2 class="text-center" style="color: var(--main-color)">ABOUT US</h2>
 				<!-- list roles -->
 				<div class="col-lg-8 col-lg-offset-2">
 					<p>Star Course is a live-concert promotion and production organization run by students for fellow UIUC students and for the Champaign-Urbana community. Members participate in all levels of event planning – from booking artists and designing ad campaigns to organizing ticket sales or staffing house and backstage positions on the day of show. Star Course is about diversity in music, creativity in learning, and friendship in community.</p>
@@ -386,7 +388,7 @@
 					<p><b>Committment</b><br/> Staff members should be prepared for all-staff meetings, committee meetings, and regular member events. Show dates vary throughout the semester and time commitment varies with the climate of the concert industry. Due to the short-term,fast-paced nature of the industry, staff should be prepared to be on-call and ready for action throughout the semester.</p>
 					<p><b>Community</b><br/> Star Course is about building a community of friends around music and sharing working, learning, and social experiences. Members come into contact with hundreds of new people and are exposed to new types of music. Frequent show meetings and member events give staff the opportunity build friendships and share experiences around music.
 					</p>
-					<p><b>How to Join</b><br/> Star Course accepts new members at the beginning of each Fall and Spring Semester. Managers are looking for new members who are interested in learning about the concert industry, willing to make the necessary time commitment for putting on shows, or simply love music. Contact us to learn more.</p>
+					<p><b style="color: var(--main-color)">HOW TO JOIN</b><br/> Star Course accepts new members at the beginning of each Fall and Spring Semester. Managers are looking for new members who are interested in learning about the concert industry, willing to make the necessary time commitment for putting on shows, or simply love music. Contact us to learn more.</p>
 				</div>
 			</div>
 		</div> <!-- end of container -->
@@ -400,10 +402,10 @@
 		All images should be the same dimensions in order to fit correctly. -->
 		<div class="gallery">
 			<ul>
-				<li class="col-md-3"><img src="img/livephotos/concert2bw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/grouplove-2bw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/phant-2bw.jpg" alt="">
-				</li><li class="col-md-3"><img src="img/livephotos/grouplove3bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/concert2bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/grouplove-2bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/phant-2bw.jpg" alt="">
+				</li><li class="col-md-3" ><img src="img/livephotos/grouplove3bw.jpg" alt=""></li>
 			</ul>
 		</div>
 	</section>
@@ -413,7 +415,7 @@
 	<!-- STAFF SECTION -->
 	<section id="staff">
 		<a name="staff"></a>
-		<div class="container content-section text-left">
+		<div class="container content-section text-left" style="padding-top: 70px; padding-bottom: 70px;">
 			<div class="row">
 				<h2 class="text-center">COMMITTEES AND DIVISIONS</h2>
 				<div class="col-lg-8 col-lg-offset-2">
@@ -444,10 +446,10 @@
 		All images should be the same dimensions in order to fit correctly. -->
 		<div class="gallery">
 			<ul>
-				<li class="col-md-3"><img src="img/livephotos/crowdbw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/baauer2bw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/grouplove4bw.jpg" alt=""></li>
-				<li class="col-md-3"><img src="img/livephotos/phant3bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/crowdbw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/baauer2bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/grouplove4bw.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos/phant3bw.jpg" alt=""></li>
 			</ul>
 		</div>
 	</section>
@@ -457,10 +459,10 @@
 	<!-- Contact Section -->
 	<section id="contact">
 		<a name="contact"></a>
-		<div class="container content-section text-center">
+		<div class="container content-section text-center" style="padding-top: 70px; padding-bottom: 70px;">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h2>Contact Us</h2>
+					<h2 style="color: var(--main-color)">Contact Us</h2>
 					<!-- TODO: Change contact info for senior managers -->
 					<p>
 						Any questions? Contact
@@ -471,13 +473,13 @@
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
 						<li>
-							<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
+							<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg" style="box-shadow: -5px 5px 7px var(--main-color);"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
 						</li>
 						<li>
-							<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
+							<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg" style="box-shadow: 0px 5px 7px var(--main-color);"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
 						</li>
 						<li>
-							<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
+							<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg" style="box-shadow: 5px 5px 7px var(--main-color);"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
 						</li>
 					</ul>
 				</div>
