updated history and other small changes

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 					<!-- End of Current Show -->
 
 
-					<hr style="border-top: dotted 1px;" /><br><br>
+					<hr style="border-top: dotted 1px; width: 80%;" /><br><br>
 
 					<!-- PREVIOUS EVENTS SECTION (HIDDEN) -->
 					<h3>PREVIOUS EVENTS</h3>
@@ -242,7 +242,7 @@
 
 					<!-- TODO: replace this with most-recent season and move this block into posters section below -->
 					<!-- last season's shows -->
-					<div class="row lastSeasonPosters">
+					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 						<h4 class="text-center"> 2019 - 2020 Season </h4>
 						<img src="img/posters/doja.jpg" title="Doja Cat" style="margin-top: 5px;" height="250">
 						<img src="img/posters/peachpit.jpg" title="Peach Pit" style="margin-top: 5px;" height="250">
@@ -252,10 +252,11 @@
 
 					<!-- button to show posters -->
 					<p>
-						<button id="posterButton" class="btnghost" style="box-shadow: 0px 5px 7px #000;" onclick="showPosters()">
+						<button id="posterButton" class="btnghost rounded" style="box-shadow: 0px 5px 7px rgb(99, 99, 99);" onclick="showPosters()">
 							<i id="posterButtonI" class="fa fa-caret-down fa-fw"></i><span id="posterButtonSpan">Show More</span>
 						</button>
 					</p>
+					<br>
 
 					
 
@@ -273,7 +274,7 @@
 						</div>
 						<br> -->
 						
-						<div class="row">
+						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2018 - 2019 Season </h4>
 							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney"  style="margin-top: 5px;" height="250">
 							<img src="img/posters/lovelytheband.jpg" title="lovelytheband" style="margin-top: 5px;" height="250">
@@ -282,7 +283,7 @@
 							<p><br></p>
 						</div>
 						<br>
-						<div class="row">
+						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2017 - 2018 Season </h4>
 							<img src="img/posters/joywave.png" title="Joywave" style="margin-top: 5px;" height="250">
 							<img src="img/posters/waka.jpg" title="Waka Flocka Flame" style="margin-top: 5px;" height="250">
@@ -291,7 +292,7 @@
 							<p><br></p>
 						</div>
 						<br>
-						<div class="row">
+						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2016 - 2017 Season </h4>
 							<img src="img/posters/neonindian.png" title="Neon Indian" style="margin-top: 5px;" height="250">
 							<img src="img/posters/americanfootball.png" title="American Football" style="margin-top: 5px;" height="250">
@@ -301,7 +302,7 @@
 							<p><br></p>
 						</div>
 						<br>
-						<div class="row">
+						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2015 - 2016 Season </h4>
 							<img src="img/posters/nateruess.png" title="Nate Ruess" style="margin-top: 5px;" height="250">
 							<img src="img/posters/raesremmurd.png" title="Rae Sremmurd" style="margin-top: 5px;" height="250">
@@ -310,7 +311,7 @@
 							<p><br></p>
 						</div>
 						<br>
-						<div class="row">
+						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2014 - 2015 Season </h4>
 							<img src="img/posters/skyferreira.jpg" title="Sky Ferreira" style="margin-top: 5px;" height="250">
 							<img src="img/posters/hoodieallen.jpg" title="Hoodie Allen" style="margin-top: 5px;" height="250">
@@ -320,7 +321,7 @@
 							<p><br></p>
 						</div>
 						<br>
-						<div class="row">
+						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2013 - 2014 Season </h4>
 							<img src="img/posters/caseyjames.jpg" title="Casey James" style="margin-top: 5px;" height="250">
 							<img src="img/posters/baauer.jpg" title="Baauer" style="margin-top: 5px;" height="250">
@@ -331,8 +332,8 @@
 						</div>
 
 						<!-- BUTTON at bottom of posters, redirects to history -->
-						<a href="history.html#history" ><button id="backButton" class="btnghost" >
-							<span id="posterButtonSpan" >See More History</span>
+						<a href="history.html#history"><button id="backButton" class="btnghost" >
+							<span id="posterButtonSpan">See More History</span>
 							<i id="backButton" class="fa fa-caret-right fa-fw" ></i>
 						</button></a>
 
