--- a/history.html
+++ b/history.html
@@ -40,7 +40,9 @@
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-<!-- Navigation -->
+
+
+<!-- NAVBAR -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 <div class="container">
 	<div class="navbar-header">
@@ -84,12 +86,12 @@
 				<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
 			</li>
 		</ul>
-	</div>
-	<!-- /.navbar-collapse -->
-</div>
-<!-- /.container -->
-</nav>
-<!-- Intro Header -->
+	</div><!-- end of navbar-collapse -->
+</div><!-- end of container -->
+</nav><!-- end of navbar -->
+
+
+<!-- INTRO HEADER -->
 <!-- TODO: Change background image in theme.css -->
 <header class="intro">
 <a name="intro"></a>
@@ -106,7 +108,9 @@
 	</div>
 </div>
 </header>
-<!-- History Section -->
+
+
+<!-- HISTORY -->
 <section id="history">
 <a name="history"></a>
 <div class="container content-section text-center">
@@ -510,6 +514,11 @@
 				Smino<br>
 				Lil Yachty (Spring Jam)<br>
 			</p>
+			<p><b>2019-2020</b><br>
+				Doja Cat<br>
+				Peach Pit<br>
+				Earthgang<br>
+			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
 				BandName1<br>
@@ -523,9 +532,10 @@
 			</button></a>
 		</div>
 	</div>
-</div>
-<!-- ./Events Section -->
+</div><!-- end of Events Section -->
 </section>
+
+
 <!-- Footer -->
 <footer>
 <div class="container text-center">
@@ -535,11 +545,13 @@
 		Established 1892<br><br>
 		<a href="https://www.facebook.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Facebook</a>
 			● <a href="https://twitter.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Twitter</a>
-			● <a href="https://instagram.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Instagram</a><br><br>
-		"Aries" Template by WowThemes.net
+			● <a href="https://instagram.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Instagram</a><br>
+		<!-- "Aries" Template by WowThemes.net -->
 	</p>
 </div>
-</footer>
+</footer> <!-- end of footer -->
+
+
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
 <!-- Bootstrap Core JavaScript -->
@@ -548,5 +560,7 @@
 <script src="js/jquery.easing.min.js"></script>
 <!-- Custom Theme JavaScript -->
 <script src="js/theme.js"></script>
+
+
 </body>
 </html>
