Pre-Quad Day Fall 2021

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 					<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 
 					<!-- TODO: End of spring semester -->
-					<p>Thanks for a great 2019 - 2020 season!<br/><br/>
-						<b>find us in the fall @starcourseuiuc</b>
+					<!-- <p>Thanks for a great 2019 - 2020 season!<br/><br/>
+						<b>Find us in the fall @starcourseuiuc</b>
 						<br/> to join our staff for the 2020 - 2021 school year.
 						<br/>
 						<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
@@ -137,12 +137,16 @@
 						<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
 						<br />
 					</p>
-					<br/>
+					<br/> -->
 
 					<!-- TODO: End of spring semester -->
-					<!-- <p>Thanks for a great 2019 - 2020 season!<br/><br/>
-						<b>Find us at Quad Day on Sunday August 26th, 2018</b><br/> to join our staff for the 2018 - 2019 school year.<br/>
-					</p><br/> -->
+					<p>Thanks for a great 2019 - 2020 season!<br/><br/>
+						<b>Find us at Quad Day on Sunday August 22th, 2021 from 12-4PM </b>
+                        <br/> to join our staff for the 2021 - 2022 school year.<br/>
+                        <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
+						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+						<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
+					</p><br/>
 
 					<!-- TODO: Post-Quad Day
 					<p>
@@ -247,8 +251,17 @@
 						<img src="img/posters/doja.jpg" title="Doja Cat" style="margin-top: 5px;" height="250">
 						<img src="img/posters/peachpit.jpg" title="Peach Pit" style="margin-top: 5px;" height="250">
 						<img src="img/posters/earthgang.png" title="Earthgang" style="margin-top: 5px;" height="250">
-						<p><br></p>
+						<!-- <p><br></p> -->
 					</div>
+
+					<!-- some photos -->
+					<!-- <div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
+						<img src="img/livephotos2/doja1.jpg" title="Doja Cat" style="margin-top: 5px;" height="245">
+						<img src="img/livephotos2/peach1.png" title="Peach Pit" style="margin-top: 5px;" height="245">
+						<img src="img/livephotos2/earth1.jpg" title="Earthgang" style="margin-top: 5px;" height="245">
+						<p><br></p>
+					</div> -->
+
 
 					<!-- button to show posters -->
 					<p>
@@ -343,6 +356,18 @@
 		</div><!-- end of container -->
 	</section>
 	<!-- end of events section -->
+
+	<!-- promo photos -->
+	<!-- <section>
+		<div class="row gallery" style="margin: 10px;">
+			<ul>
+				<li class="col-md-4" ><img src="img/doja-promo.PNG" title="Doja Cat" style="margin-top: 5px;"></li>
+				<li class="col-md-4" ><img src="img/earth-promo.PNG" title="Peach Pit" style="margin-top: 5px;"></li>
+				<li class="col-md-4" ><img src="img/peach-promo.PNG" title="Earthgang" style="margin-top: 5px;"></li>
+			</ul>
+		</div>
+	</section> -->
+	
 
 
 	<!-- PICTURE GALLERY 1-->
@@ -456,6 +481,19 @@
 	</section>
 	<!-- end of picture gallery 3 -->
 
+	<!-- PICTURE GALLERY 3  - COLORS-->
+	<!-- <section id="break3">
+		<div class="gallery">
+			<ul>
+				<li class="col-md-3" ><img src="img/livephotos2/ex1.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos2/peach2.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos2/peach3.jpg" alt=""></li>
+				<li class="col-md-3" ><img src="img/livephotos2/doja3.jpg" alt=""></li>
+			</ul>
+		</div>
+	</section> -->
+	<!-- end of picture gallery 3 -->
+
 
 	<!-- Contact Section -->
 	<section id="contact">
@@ -469,7 +507,7 @@
 						Any questions? Contact
 						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>
 						<br>
-						2020-2021 Senior Managers: <br />Leyla and Sarah
+						2021-2022 Senior Managers: <br />Hannah, Christian, and Corey
 					</p>
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
