--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
 					<br/> -->
 
 					<!-- TODO: End of spring semester -->
-					<p>Thanks for a great 2019 - 2020 season!<br/><br/>
+					<!-- <p>Thanks for a great 2019 - 2020 season!<br/><br/>
 						<b>Find us at Quad Day on Sunday August 22th, 2021 from 12-4PM </b>
                         <br/> to join our staff for the 2021 - 2022 school year.<br/>
                         <a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 						<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
 						<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-					</p><br/>
+					</p><br/> -->
 					<!-- TODO: Post-Quad Day
 					<p>
 						If you missed us at Quad Day but are still interested in joining,<br>
@@ -162,19 +162,17 @@
 					<hr style="border-top: dotted 1px;" /><br>
 					-->
 
-
-
 					<!-- TODO: Show announcements and tickets (template) -->
-					<!-- <img height="50%" width="50%" src="img/posters/file_name.png"/>
+					<img height="40%" width="40%" src="img/posters/bbPoster.png"/>
 					<p>
 						<br>Star Course presents<br>
-						<b>Artist Name</b><br>
-						<br>
+						<b>Beach Bunny</b><br>
+						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
-						<br>
-						<b>Weekday Month Day, Year</b><br>
-						Doors 6:30pm | Show 7:30pm<br>
-						Students $XX | Public $XX<br>
+						<br> -->
+						<b>Thursday October 7th, 2021</b><br>
+						Doors 7:00pm | Show 7:30pm<br>
+						Students $17 | Public $24<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
 						709 S Mathews Ave<br>
@@ -183,14 +181,15 @@
 						Additional online service fees apply.<br>
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
+                        Masks required.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="student ticket link here"
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="public ticket link here"
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=FBB&linkID=illinois&shopperContext=&caller=&appCode="
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-					 	<a href="facebook event link here"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-					</p> -->
+					 	<!-- <a href="facebook event link here"
+							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+					</p>
 					
 					
 					<!-- TODO Paste Poster Image Link for Upcoming Show here: -->
