--- a/index.html
+++ b/index.html
@@ -162,17 +162,20 @@
 					<hr style="border-top: dotted 1px;" /><br>
 					-->
 
+
+
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/bbPoster.png"/>
+					<img height="40%" width="40%" src="img/posters/bbnoPoster.png"/>
 					<p>
 						<br>Star Course presents<br>
-						<b>Beach Bunny</b><br>
+						<b>bbno$</b><br>
+						"baby no money"<br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br> -->
-						<b>Thursday October 7th, 2021</b><br>
-						Doors 7:00pm | Show 7:30pm<br>
-						Students $17 | Public $24<br>
+						<b>Saturday February 5th, 2022</b><br>
+						Doors 6:30pm | Show 7:30pm<br>
+						Students $20 | Public $25<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
 						709 S Mathews Ave<br>
@@ -181,11 +184,12 @@
 						Additional online service fees apply.<br>
 						Foellinger Auditorium is reserved seating only.<br>
 						No backpacks, food, or drink allowed.<br>
+                        Proof of Vaccination or Negative Test required.<br>
                         Masks required.<br>
 						Foellinger Auditorium is a non-smoking venue.<br><br>
 						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=FBB&linkID=illinois&shopperContext=&caller=&appCode="
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE21%3A0205%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CHI&cgc=&dataAccId=863&locale=en_US&siteId=ev_illinois"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
@@ -245,10 +249,8 @@
 					<!-- TODO: replace this with most-recent season and move this block into posters section below -->
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
-						<h4 class="text-center"> 2019 - 2020 Season </h4>
-						<img src="img/posters/doja.jpg" title="Doja Cat" style="margin-top: 5px;" height="250">
-						<img src="img/posters/peachpit.jpg" title="Peach Pit" style="margin-top: 5px;" height="250">
-						<img src="img/posters/earthgang.png" title="Earthgang" style="margin-top: 5px;" height="250">
+						<h4 class="text-center"> 2021 - 2022 Season </h4>
+						<img src="img/posters/bbPoster.png" title="Beach Bunny" style="margin-top: 5px;" height="250">
 						<!-- <p><br></p> -->
 					</div>
 
@@ -284,7 +286,15 @@
 							<p><br></p>
 						</div>
 						<br> -->
-						
+
+                        <div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
+                            <h4 class="text-center"> 2019 - 2020 Season </h4>
+                            <img src="img/posters/doja.jpg" title="Doja Cat" style="margin-top: 5px;" height="250">
+                            <img src="img/posters/peachpit.jpg" title="Peach Pit" style="margin-top: 5px;" height="250">
+                            <img src="img/posters/earthgang.png" title="Earthgang" style="margin-top: 5px;" height="250">
+                            <p><br></p>
+                        </div>	
+						<br>
 						<div class="row" style="margin-left: 2px; margin-right: 2px;">
 							<h4 class="text-center"> 2018 - 2019 Season </h4>
 							<img src="img/posters/jessemccartney.jpg" title="Jesse McCartney"  style="margin-top: 5px;" height="250">
