bbno opener link

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+						<a href="https://docs.google.com/forms/d/e/1FAIpQLSdreeAk3J4Jk8W2YTnB1njs32YKrijjVjjq4Q2epeqkjuqx5g/viewform?vc=0&c=0&w=1&flr=0"
+                             class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
 					</p>
 					
 					
