--- a/index.html
+++ b/index.html
@@ -165,16 +165,15 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/bbnoPoster.png"/>
+					<img height="40%" width="40%" src="img/posters/SALES_poster.png"/>
 					<p>
 						<br>Star Course presents<br>
-						<b>bbno$</b><br>
-						"baby no money"<br>
+						<b>SALES</b><br><br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br> -->
-						<b>Saturday February 5th, 2022</b><br>
-						Doors 6:30pm | Show 7:30pm<br>
+						<b>Saturday October 29th, 2022</b><br>
+						Doors 7pm | Show 7:30pm<br>
 						Students $20 | Public $25<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
@@ -252,6 +251,7 @@
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
 						<h4 class="text-center"> 2021 - 2022 Season </h4>
+						<img src="img/posters/bbnoPoster.png" title="bbno$" style="margin-top: 5px;" height="250">
 						<img src="img/posters/bbPoster.png" title="Beach Bunny" style="margin-top: 5px;" height="250">
 						<!-- <p><br></p> -->
 					</div>
