--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
-						<a href="https://docs.google.com/forms/d/e/1FAIpQLSdreeAk3J4Jk8W2YTnB1njs32YKrijjVjjq4Q2epeqkjuqx5g/viewform?vc=0&c=0&w=1&flr=0"
+						<a href="https://docs.google.com/forms/d/e/1FAIpQLScY_wrxcap8eC82_SCIxfi_uL3wyhwn6LWYhYoLoHhoQD17Aw/viewform?usp=sf_link"
                              class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
 					</p>
 					
