--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 					<img height="40%" width="40%" src="img/posters/SALES_poster.png"/>
 					<p>
 						<br>Star Course presents<br>
-						<b>SALES</b><br><br>
+						<b>Armani White</b><br><br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br> -->
-						<b>Saturday October 29th, 2022</b><br>
-						Doors 7pm | Show 7:30pm<br>
-						Students $20 | Public $25<br>
+						<b>Thursday March 2nd, 2023</b><br>
+						Doors 7:30pm | Show 8pm<br>
+						Students $16 | Public $24<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
 						709 S Mathews Ave<br>
