--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/armani_white_poster.png"/>
+					<img height="40%" width="40%" src="img/posters/armani_white_poster.jpeg"/>
 					<p>
 						<br>Star Course presents<br>
 						<b>Armani White</b><br><br>
@@ -250,9 +250,8 @@
 					<!-- TODO: replace this with most-recent season and move this block into posters section below -->
 					<!-- last season's shows -->
 					<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
-						<h4 class="text-center"> 2021 - 2022 Season </h4>
-						<img src="img/posters/bbnoPoster.png" title="bbno$" style="margin-top: 5px;" height="250">
-						<img src="img/posters/bbPoster.png" title="Beach Bunny" style="margin-top: 5px;" height="250">
+						<h4 class="text-center"> 2022 - 2023 Season </h4>
+						<img src="img/posters/SALES_poster.png" title="SALES" style="margin-top: 5px;" height="250">
 						<!-- <p><br></p> -->
 					</div>
 
@@ -288,8 +287,13 @@
 							<p><br></p>
 						</div>
 						<br> -->
-
-                        <div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
+			<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
+			<h4 class="text-center"> 2021 - 2022 Season </h4>
+			<img src="img/posters/bbnoPoster.png" title="bbno$" style="margin-top: 5px;" height="250">
+			<img src="img/posters/bbPoster.png" title="Beach Bunny" style="margin-top: 5px;" height="250">
+						</div>
+						<br>
+			<div class="row lastSeasonPosters" style="margin-left: 2px; margin-right: 2px;">
                             <h4 class="text-center"> 2019 - 2020 Season </h4>
                             <img src="img/posters/doja.jpg" title="Doja Cat" style="margin-top: 5px;" height="250">
                             <img src="img/posters/peachpit.jpg" title="Peach Pit" style="margin-top: 5px;" height="250">
