--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/armani_white_poster.jpeg"/>
+					<img height="40%" width="40%" src="img/posters/armani_white_poster.png"/>
 					<p>
 						<br>Star Course presents<br>
 						<b>Armani White</b><br><br>
