--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
-						<a href="https://docs.google.com/forms/d/e/1FAIpQLScY_wrxcap8eC82_SCIxfi_uL3wyhwn6LWYhYoLoHhoQD17Aw/viewform?usp=sf_link"
-                             class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
-					</p>
+						 <!-- <a href="opener contest google form link here"
+                             			class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
+					</p> -->
 					
 					
 					<!-- TODO Paste Poster Image Link for Upcoming Show here: -->
