--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						Foellinger Auditorium is a non-smoking venue.<br><br>
 						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=SALES&linkID=illinois&shopperContext=&caller=&appCode="
+						<a href="https://fightingillini.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE22%3A0302%3A&linkID=illinois&&dataAccId=863&locale=en_US&siteId=ev_illinois"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
