--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/armani_white_poster.png"/>
+					<img height="40%" width="40%" src="img/posters/Rescheduled_Armani_poster.png"/>
 					<p>
 						<br>Star Course presents<br>
 						<b>Armani White</b><br><br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 						<br> -->
-						<b>Thursday March 2nd, 2023</b><br>
-						Doors 7:30pm | Show 8pm<br>
+						<b>Wednesday April 5th, 2023</b><br>
+						Doors 7pm | Show 7:30pm<br>
 						Students $16 | Public $24<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
