--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 						Any questions? Contact
 						<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>
 						<br>
-						2022-2023 Senior Managers: <br />Marc and Michaela
+						2023-2024 Senior Managers: <br />Isra and Carlo
 					</p>
 					<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 					<ul class="list-inline banner-social-buttons">
